--- a/styles/global.css
+++ b/styles/global.css
@@ -21,14 +21,16 @@
 
 body{
     background: var(--background-color);
-
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 main{
     background-color: var(--mainBackgroundColor);
     max-width: 1200px;
     padding: 100px;
-    margin: auto;
+    margin: auto auto 150px auto;
     box-shadow: 4px 4px 40px rgba(56, 56, 56, 0.25);
     display: flex;
     flex-direction: column;
