--- a/styles/homeStyle.css
+++ b/styles/homeStyle.css
@@ -65,8 +65,9 @@
     transition: 0.5s;
 }
 
-#photos img:hover{
+#photos img:hover, #photoV img:hover, #photoH img:hover{
     transform: scale(1.05);
+    z-index: 2;
 }
 
 #photoV img {
@@ -74,14 +75,19 @@
     width: 500px;
     height: 550px;
     aspect-ratio: 10/11;
+    transition: 0.5s;
+    position: relative;
 }
 
 #photoH img{
     object-fit: cover;
     width: 500px;
     height: 270px;
+    transition: 0.5s;
     aspect-ratio: 50/27;
+    position: relative;
 }
+
 
 #photoH {
     display: flex;
@@ -93,14 +99,45 @@
 .chevron{
     width: 45px;
     cursor: pointer;
+    transition: 0.5s ease-in-out;
 }
 
-.fadeOut{
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+.chevron:hover{
+    transform: scale(1.1);
 }
 
-.fadeIn{
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
+#showImg{
+    position: fixed;
+    z-index: 5;
+    width: 96vw;
+    height: 100vh;
+    top: 0;
+    left : 0;
+    margin : 0;
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    padding:  0 2em;
+
+}
+
+#bigImg{
+    height: 90%;
+}
+
+#close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 2em 2em 0 0;
+    z-index: 10;
+    width: 32px;
+    transition: 0.5s ease-in-out;
+}
+
+#close:hover {
+    cursor: pointer;
+    transform: scale(1.1);
 }
