--- a/styles/global.css
+++ b/styles/global.css
@@ -128,6 +128,15 @@ li > a:hover {
     }
 
     ul {
-        gap: 5px;
+        gap: 8px;
+    }
+
+    li > div {
+        width: 6px;
+        height: 6px;
+    }
+
+    li > a {
+        font-size: 16px;
     }
 }
