--- a/styles/global.css
+++ b/styles/global.css
@@ -118,6 +118,13 @@ li > a:hover {
     }
 }
 
+
+@media (max-width: 1440px) {
+    main{
+        padding: 20px;
+    }
+}
+
 @media (max-width: 480px) {
     main {
         padding: 20px;
