--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,13 @@
 @font-face {
     font-family: "Raleway", sans-serif;
-    src: url("assets/font/Raleway/Raleway-VariableFont_wght.ttf") format("truetype");
+    src: url("assets/font/Raleway/Raleway-VariableFont_wght.ttf") format("truetype"),
+         url("assets/font/Raleway/Raleway-VariableFont_wght.woff") format("woff");
 }
 
 @font-face {
     font-family: "Dancing Script", cursive;
-    src: url("assets/font/DancingScript/DancingScript-VariableFont_wght.ttf") format("truetype");
+    src: url("assets/font/DancingScript/DancingScript-VariableFont_wght.ttf") format("truetype"),
+         url("assets/font/DancingScript/DancingScript-VariableFont_wght.woff") format("woff");
 }
 
 :root{
