--- a/styles/contactStyle.css
+++ b/styles/contactStyle.css
@@ -1,6 +1,7 @@
 
 main{
     padding-bottom: 150px;
+    padding-top: 30px;
 }
 
 main > div {
@@ -61,10 +62,30 @@ a{
     text-decoration: underline var(--accentColor);
 }
 
-.button:hover {
 
+
+@media (max-width: 1440px){
+
+    h1 {
+        font-size: 48px;
+    }
+
+    #logo{
+        max-width: 250px;
+    }
+
+    .button {
+        padding: 15px 30px;
+    }
+
+    .button > p {
+        font-size: 16px;
+    }
+
+    .button > img{
+        width: 28px;
+    }
 }
-
 
 @media (max-width: 768px) {
 
